--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h3>About</h3><br>
-      <p class="about">This is only a sample school ERP website made by me, Prajjwala, an engineering student and a curious, but a slow learner. Hope you liked it. I am always open to constructive criticicm. <br>
+      <p class="about">This is only a sample school ERP website made by me, Prajjwala, an engineering student and a curious, but a slow learner. Hope you liked it. I am always open to constructive criticism. <br>
         Feel free to <a href="#footer">contact me!</a> </p>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="cloud-img">
